--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
     <div class="container">
         <h1>Buen Inicio de Ciclo</h1>
-        <p>¡Hoy es el día donde empezará tu gran esperado estrés, presión y tareas!</p>
+        <p>¡Hoy es el día donde empezará tu gran esperado estrés, presión y tareas! Ya en el sexto ciclo de tu carrera sigue así se qeu puedes con todo y sabes que estaré apoyandote en todo lo que necesites.
+        <br>
+        Eres luz en mis ojos, un brillo sin fin,
+        Mis lágrimas de alegría, empiezan a fluir,
+        Felicidad en gotas, en cada realidad.
+        </p>
         <p>Te quiero bonito,<br>Renzo</p>
     </div>
     <div class="containerbox">
