--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
     }
 
 </script>
-
+<br>
 <footer>
-   <!--  <div>
-        <a href="galeriameses.html" type="button" class="color-button-next"> Galeria</a>
-    </div>-->
+   <div>
+        <a href="Galeria1.html" type="button" class="color-button-next"> Galeria</a>
+    </div>
 </footer>
+<br>
 
 </html>
