--- a/Galeria1.html
+++ b/Galeria1.html
@@ -30,101 +30,17 @@
         <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 4', 'Imagen4.jpeg')">
             <img src="Imagen4.jpeg" alt="Foto 4">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'Imagen1.jpeg')">
-            <img src="Imagen1.jpeg" alt="Foto 1">
+        <div class="photo" onclick="openModal('Foto 5', 'Descripción de la Foto 5', 'Imagen5.jpeg')">
+            <img src="Imagen5.jpeg" alt="Foto 5">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 2', 'Imagen2.jpeg')">
-            <img src="Imagen2.jpeg" alt="Foto 2">
+        <div class="photo" onclick="openModal('Foto 6', 'Descripción de la Foto 6', 'Imagen6.jpeg')">
+            <img src="Imagen6.jpeg" alt="Foto 6">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 3', 'Imagen3.jpeg')">
-            <img src="Imagen3.jpeg" alt="Foto 3">
+        <div class="photo" onclick="openModal('Foto 7', 'Descripción de la Foto 7', 'imagenes/Imagen7.jpeg')">
+            <img src="imagenes/Imagen7.jpeg" alt="Foto 7">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 4', 'Imagen4.jpeg')">
-            <img src="Imagen4.jpeg" alt="Foto 4">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'Imagen1.jpeg')">
-            <img src="Imagen1.jpeg" alt="Foto 1">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 2', 'Imagen2.jpeg')">
-            <img src="Imagen2.jpeg" alt="Foto 2">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 3', 'Imagen3.jpeg')">
-            <img src="Imagen3.jpeg" alt="Foto 3">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 4', 'Imagen4.jpeg')">
-            <img src="Imagen4.jpeg" alt="Foto 4">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'Imagen1.jpeg')">
-            <img src="Imagen1.jpeg" alt="Foto 1">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 2', 'Imagen2.jpeg')">
-            <img src="Imagen2.jpeg" alt="Foto 2">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 3', 'Imagen3.jpeg')">
-            <img src="Imagen3.jpeg" alt="Foto 3">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 4', 'Imagen4.jpeg')">
-            <img src="Imagen4.jpeg" alt="Foto 4">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'Imagen1.jpeg')">
-            <img src="Imagen1.jpeg" alt="Foto 1">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 2', 'Imagen2.jpeg')">
-            <img src="Imagen2.jpeg" alt="Foto 2">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 3', 'Imagen3.jpeg')">
-            <img src="Imagen3.jpeg" alt="Foto 3">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 4', 'Imagen4.jpeg')">
-            <img src="Imagen4.jpeg" alt="Foto 4">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'Imagen1.jpeg')">
-            <img src="Imagen1.jpeg" alt="Foto 1">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 2', 'Imagen2.jpeg')">
-            <img src="Imagen2.jpeg" alt="Foto 2">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 3', 'Imagen3.jpeg')">
-            <img src="Imagen3.jpeg" alt="Foto 3">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 4', 'Imagen4.jpeg')">
-            <img src="Imagen4.jpeg" alt="Foto 4">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'Imagen1.jpeg')">
-            <img src="Imagen1.jpeg" alt="Foto 1">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 2', 'Imagen2.jpeg')">
-            <img src="Imagen2.jpeg" alt="Foto 2">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 3', 'Imagen3.jpeg')">
-            <img src="Imagen3.jpeg" alt="Foto 3">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 4', 'Imagen4.jpeg')">
-            <img src="Imagen4.jpeg" alt="Foto 4">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'Imagen1.jpeg')">
-            <img src="Imagen1.jpeg" alt="Foto 1">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 2', 'Imagen2.jpeg')">
-            <img src="Imagen2.jpeg" alt="Foto 2">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 3', 'Imagen3.jpeg')">
-            <img src="Imagen3.jpeg" alt="Foto 3">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 4', 'Imagen4.jpeg')">
-            <img src="Imagen4.jpeg" alt="Foto 4">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'Imagen1.jpeg')">
-            <img src="Imagen1.jpeg" alt="Foto 1">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 2', 'Imagen2.jpeg')">
-            <img src="Imagen2.jpeg" alt="Foto 2">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 3', 'Imagen3.jpeg')">
-            <img src="Imagen3.jpeg" alt="Foto 3">
-        </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 4', 'Imagen4.jpeg')">
-            <img src="Imagen4.jpeg" alt="Foto 4">
+        <div class="photo" onclick="openModal('Foto 8', 'Descripción de la Foto 8', 'imagenes/Imagen8.jpeg')">
+            <img src="imagenes/Imagen8.jpeg" alt="Foto 8">
         </div>
         
         <!-- Agrega más elementos .photo para más fotos -->
