--- a/Galeria1.html
+++ b/Galeria1.html
@@ -30,11 +30,11 @@
         <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 4', 'Imagen4.jpeg')">
             <img src="Imagen4.jpeg" alt="Foto 4">
         </div>
-        <div class="photo" onclick="openModal('Foto 5', 'Descripción de la Foto 5', 'Imagen5.jpeg')">
-            <img src="Imagen5.jpeg" alt="Foto 5">
+        <div class="photo" onclick="openModal('Foto 5', 'Descripción de la Foto 5', 'imagenes/Imagen5.jpeg')">
+            <img src="imagenes/Imagen5.jpeg" alt="Foto 5">
         </div>
-        <div class="photo" onclick="openModal('Foto 6', 'Descripción de la Foto 6', 'Imagen6.jpeg')">
-            <img src="Imagen6.jpeg" alt="Foto 6">
+        <div class="photo" onclick="openModal('Foto 6', 'Descripción de la Foto 6', 'imagenes/Imagen6.jpeg')">
+            <img src="imagenes/Imagen6.jpeg" alt="Foto 6">
         </div>
         <div class="photo" onclick="openModal('Foto 7', 'Descripción de la Foto 7', 'imagenes/Imagen7.jpeg')">
             <img src="imagenes/Imagen7.jpeg" alt="Foto 7">
