--- a/Galeria1.html
+++ b/Galeria1.html
@@ -18,29 +18,34 @@
     </div>
 
     <div class="gallery">
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'Imagen1.jpeg')">
-            <img src="Imagen1.jpeg" alt="Foto 1">
+        
+        <div class="photo" onclick="openModal('Playa', 'Una salida a la playa de barranco', 'Imagenes/Imagen1.jpeg')">
+            <img src="Imagenes/Imagen1.jpeg" alt="Foto 1">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 2', 'Imagen2.jpeg')">
-            <img src="Imagen2.jpeg" alt="Foto 2">
+        <div class="photo" onclick="openModal('Te Kgaste', 'Una miradaita llena de amor mientras tomaba una fotis <3', 'Imagenes/Imagen2.jpeg')">
+            <img src="Imagenes/Imagen2.jpeg" alt="Foto 2">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 3', 'Imagen3.jpeg')">
-            <img src="Imagen3.jpeg" alt="Foto 3">
+        <div class="photo" onclick="openModal('Juntis', 'Caminando mi mininita tomo una foto de nuestros collares', 'Imagenes/Imagen3.jpeg')">
+            <img src="Imagenes/Imagen3.jpeg" alt="Foto 3">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 4', 'Imagen4.jpeg')">
-            <img src="Imagen4.jpeg" alt="Foto 4">
+        <div class="photo" onclick="openModal('Bellos', 'Una foto muy linda, que linda tamaquina', 'Imagenes/Imagen4.jpeg')">
+            <img src="Imagenes/Imagen4.jpeg" alt="Foto 4">
         </div>
-        <div class="photo" onclick="openModal('Foto 5', 'Descripción de la Foto 5', 'imagenes/Imagen5.jpeg')">
-            <img src="imagenes/Imagen5.jpeg" alt="Foto 5">
+        <div class="photo"
+            onclick="openModal('26/08/23', 'Viendo la pélicula de lady bug, echados en mi cuarto', 'Imagenes/Imagen5.jpeg')">
+            <img src="Imagenes/Imagen5.jpeg" alt="Foto 5">
         </div>
-        <div class="photo" onclick="openModal('Foto 6', 'Descripción de la Foto 6', 'imagenes/Imagen6.jpeg')">
-            <img src="imagenes/Imagen6.jpeg" alt="Foto 6">
+        <div class="photo"
+            onclick="openModal('Shadow Heart', 'Hice un corazón en la sombra y mi mininita dijo fotiiis', 'Imagenes/Imagen6.jpeg')">
+            <img src="Imagenes/Imagen6.jpeg" alt="Foto 6">
         </div>
-        <div class="photo" onclick="openModal('Foto 7', 'Descripción de la Foto 7', 'imagenes/Imagen7.jpeg')">
-            <img src="imagenes/Imagen7.jpeg" alt="Foto 7">
+        <div class="photo"
+            onclick="openModal('Jugando GD', 'Luego de ver sector 9, le mostre como juego Geometry Dash', 'Imagenes/Imagen7.jpeg')">
+            <img src="Imagenes/Imagen7.jpeg" alt="Foto 7">
         </div>
-        <div class="photo" onclick="openModal('Foto 8', 'Descripción de la Foto 8', 'imagenes/Imagen8.jpeg')">
-            <img src="imagenes/Imagen8.jpeg" alt="Foto 8">
+        <div class="photo"
+            onclick="openModal('El Diablo', 'Fernin dandole un poco de pollo al Diablo', 'Imagenes/Imagen8.jpeg')">
+            <img src="Imagenes/Imagen8.jpeg" alt="Foto 8">
         </div>
         
         <!-- Agrega más elementos .photo para más fotos -->
