--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
     <div class="container">
         <div>
-            <img class="image" src="Imagen1.jpeg" alt="Imagen 1">
-            <img class="image" src="Imagen2.jpeg" alt="Imagen 3">
-            <img class="image" src="Imagen3.jpeg" alt="Imagen 2">
-            <img class="image" src="Imagen4.jpeg" alt="Imagen 4">
+            <img class="image" src="Imagenes/ImagenA.jpeg" alt="Imagen 1">
+            <img class="image" src="Imagenes/ImagenB.jpeg" alt="Imagen 3">
+            <img class="image" src="Imagenes/ImagenC.jpeg" alt="Imagen 2">
+            <img class="image" src="Imagenes/ImagenD.jpeg" alt="Imagen 4">
         </div>
     </div>
 
