--- a/Galeria1.html
+++ b/Galeria1.html
@@ -47,6 +47,31 @@
             onclick="openModal('El Diablo', 'Fernin dandole un poco de pollo al Diablo', 'imagenes/Imagen8.jpeg')">
             <img src="imagenes/Imagen8.jpeg" alt="Foto 8">
         </div>
+        <div class="photo" onclick="openModal('Te Kgaste', 'Una miradaita llena de amor mientras tomaba una fotis <3', 'imagenes/Imagen9.jpeg')">
+            <img src="imagenes/Imagen9.jpeg" alt="Foto 9">
+        </div>
+        <div class="photo" onclick="openModal('Juntis', 'Caminando mi mininita tomo una foto de nuestros collares', 'imagenes/Imagen10.jpeg')">
+            <img src="imagenes/Imagen10.jpeg" alt="Foto 10">
+        </div>
+        <div class="photo" onclick="openModal('Bellos', 'Una foto muy linda, que linda tamaquina', 'imagenes/Imagen11.jpeg')">
+            <img src="imagenes/Imagen11.jpeg" alt="Foto 11">
+        </div>
+        <div class="photo"
+            onclick="openModal('26/08/23', 'Viendo la pélicula de lady bug, echados en mi cuarto', 'imagenes/Imagen12.jpeg')">
+            <img src="imagenes/Imagen12.jpeg" alt="Foto 12">
+        </div>
+        <div class="photo"
+            onclick="openModal('Shadow Heart', 'Hice un corazón en la sombra y mi mininita dijo fotiiis', 'imagenes/Imagen13.jpeg')">
+            <img src="imagenes/Imagen13.jpeg" alt="Foto 13">
+        </div>
+        <div class="photo"
+            onclick="openModal('Jugando GD', 'Luego de ver sector 9, le mostre como juego Geometry Dash', 'imagenes/Imagen14.jpeg')">
+            <img src="imagenes/Imagen14.jpeg" alt="Foto 14">
+        </div>
+        <div class="photo"
+            onclick="openModal('El Diablo', 'Fernin dandole un poco de pollo al Diablo', 'imagenes/Imagen15.jpeg')">
+            <img src="imagenes/Imagen15.jpeg" alt="Foto 15">
+        </div>
         
         <!-- Agrega más elementos .photo para más fotos -->
     </div>
