--- a/Galeria1.html
+++ b/Galeria1.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylegalery.css">
-    <title>Primera Galeria</title>
+    <link rel="icon" href="imagenes/ImagenA.jpeg">
+    <title>Primera Galeria</title>  
 </head>
 
 <body>
