--- a/Galeria2.html
+++ b/Galeria2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylegalery.css">
+    <link rel="icon" href="imagenes/ImagenA.jpeg">
     <title>Segunda Galeria</title>
 </head>
 
@@ -16,8 +17,8 @@
     </div>
 
     <div class="gallery">
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'Imagen1.jpeg')">
-            <img src="Imagen1.jpeg" alt="Foto 1">
+        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su guaraná en copa para despetir el Agosto', 'Imagen16.jpeg')">
+            <img src="Imagen16.jpeg" alt="Foto 16">
         </div>
        
 
