--- a/Galeria2.html
+++ b/Galeria2.html
@@ -17,8 +17,8 @@
     </div>
 
     <div class="gallery">
-        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su guaraná en copa para despetir el Agosto', 'Imagen16.jpeg')">
-            <img src="Imagen16.jpeg" alt="Foto 16">
+        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su guaraná en copa para despetir el Agosto', 'imagenes/Imagen16.jpeg')">
+            <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
         </div>
        
 
