--- a/Galeria2.html
+++ b/Galeria2.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="gallery">
-        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su guaraná en copa para despetir el Agosto', 'imagenes/Imagen16.jpeg')">
+        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su Guaraná en copa para despedir el Agosto', 'imagenes/Imagen16.jpeg')">
             <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
         </div>
        
