--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 <body>
     <div class="windows" id="win">
-        <p>En tus ojos resplandece luz sin final, <br>
-            Mis lágrimas de alegria comienzan a brotar, <br>
-            Cada realidad se tiñe de felicidad, <br>
-            Eres mi razón, mi eterna claridad.</p>
+        <p>En el amanecer, mininita brillante,<br>
+            Eres la luz de mis ojos, radiante,<br>
+            En el atardecer, tu risa florece,<br>
+            Eres mi alegría, mi vida, mi amor</p>
+
         <div id="cerrar">
             <button type="button" class="color-button-close" id="win" onclick="cerrar();"> Cerrar </button>
         </div>
