--- a/Galeria2.html
+++ b/Galeria2.html
@@ -20,6 +20,18 @@
         <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su Guaraná en copa para despedir el Agosto', 'imagenes/Imagen16.jpeg')">
             <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
         </div>
+        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su Guaraná en copa para despedir el Agosto', 'imagenes/Imagen16.jpeg')">
+            <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
+        </div>
+        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su Guaraná en copa para despedir el Agosto', 'imagenes/Imagen16.jpeg')">
+            <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
+        </div>
+        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su Guaraná en copa para despedir el Agosto', 'imagenes/Imagen16.jpeg')">
+            <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
+        </div>
+        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su Guaraná en copa para despedir el Agosto', 'imagenes/Imagen16.jpeg')">
+            <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
+        </div>
        
 
         <!-- Agrega más elementos .photo para más fotos -->
