--- a/Galeria2.html
+++ b/Galeria2.html
@@ -20,17 +20,38 @@
         <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su Guaraná en copa para despedir el Agosto', 'imagenes/Imagen16.jpeg')">
             <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
         </div>
-        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su Guaraná en copa para despedir el Agosto', 'imagenes/Imagen16.jpeg')">
-            <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
+        <div class="photo" onclick="openModal('Empezando', 'La primera llamada del mes', 'imagenes/Imagen17.jpeg')">
+            <img src="imagenes/Imagen17.jpeg" alt="Foto 17">
         </div>
-        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su Guaraná en copa para despedir el Agosto', 'imagenes/Imagen16.jpeg')">
-            <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
+        <div class="photo" onclick="openModal('Tabo mimido', 'Mi mininita no quería echarse porque Tabiro estaba mimidito aaaawww', 'imagenes/Imagen18.jpeg')">
+            <img src="imagenes/Imagen18.jpeg" alt="Foto 18">
         </div>
-        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su Guaraná en copa para despedir el Agosto', 'imagenes/Imagen16.jpeg')">
-            <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
+        <div class="photo" onclick="openModal('Mimidos', 'Recuerdo que Luke dormía abrazando la patita de Tabo jijiji', 'imagenes/Imagen19.jpeg')">
+            <img src="imagenes/Imagen19.jpeg" alt="Foto 19">
         </div>
-        <div class="photo" onclick="openModal('Fin de Agosto', 'Almuerzo con su Guaraná en copa para despedir el Agosto', 'imagenes/Imagen16.jpeg')">
-            <img src="imagenes/Imagen16.jpeg" alt="Foto 16">
+        <div class="photo" onclick="openModal('Jueguito', 'Un gato en la veterinaria de mi amorcitoooo', 'imagenes/Imagen20.jpeg')">
+            <img src="imagenes/Imagen20.jpeg" alt="Foto 20">
+        </div>
+        <div class="photo" onclick="openModal('Bellísima', 'Una hermosa foto para recordarla durante mi clase 😽', 'imagenes/Imagen21.jpeg')">
+            <img src="imagenes/Imagen21.jpeg" alt="Foto 21">
+        </div>
+        <div class="photo" onclick="openModal('Chaufita de 5 estrellas', 'Preaparó chaufa con su buen limón', 'imagenes/Imagen22.jpeg')">
+            <img src="imagenes/Imagen22.jpeg" alt="Foto 22">
+        </div>
+        <div class="photo" onclick="openModal('JHjhashjjhaj', 'Fotis sin filtros', 'imagenes/Imagen23.jpeg')">
+            <img src="imagenes/Imagen23.jpeg" alt="Foto 23">
+        </div>
+        <div class="photo" onclick="openModal('Roblos', 'Simplemente roblos', 'imagenes/Imagen24.jpeg')">
+            <img src="imagenes/Imagen24.jpeg" alt="Foto 24">
+        </div>
+        <div class="photo" onclick="openModal('Jhkajhshja', 'Ojitos', 'imagenes/Imagen25.jpeg')">
+            <img src="imagenes/Imagen25.jpeg" alt="Foto 25">
+        </div>
+        <div class="photo" onclick="openModal('Un besitooo', 'Muuuuuuak', 'imagenes/Imagen26.jpeg')">
+            <img src="imagenes/Imagen26.jpeg" alt="Foto 26">
+        </div>
+        <div class="photo" onclick="openModal('JjhkJKHjkhakjhsHJ', 'Bonita barba', 'imagenes/Imagen27.jpeg')">
+            <img src="imagenes/Imagen27.jpeg" alt="Foto 27">
         </div>
        
 
