--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>En el amanecer, mininita brillante,<br>
             Eres la luz de mis ojos, radiante,<br>
             En el atardecer, tu risa florece,<br>
-            Eres mi alegría, mi vida, mi amor</p>
+            Eres mi alegría, mi vida y mi amor</p>
 
         <div id="cerrar">
             <button type="button" class="color-button-close" id="win" onclick="cerrar();"> Cerrar </button>
