--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 
 <body>
     <div class="windows" id="win">
-        <p>En el amanecer, mininita brillante,<br>
-            Eres la luz de mis ojos, radiante,<br>
-            En el atardecer, tu risa florece,<br>
-            Eres mi alegría, mi vida y mi amor</p>
+        <p> Tus ojos brillan como el cielo estrellado, </br>
+            En ellos encuentro un amor tan apasionado. </br>
+            Como rosas rojas, de pasión encendidos, </br>
+            Y como violetas azules, en ellos perdidos. </br>
+            </br>
+            En tu mirada encuentro un mundo de ternura, </br>
+            Un universo de amor, sin medida ni censura. </br>
+            Así que en este verso te digo con certeza, </br>
+            Que en tus ojos hallé la más hermosa belleza.</p>
 
         <div id="cerrar">
             <button type="button" class="color-button-close" id="win" onclick="cerrar();"> Cerrar </button>
