--- a/Galeria2.html
+++ b/Galeria2.html
@@ -53,7 +53,61 @@
         <div class="photo" onclick="openModal('JjhkJKHjkhakjhsHJ', 'Bonita barba', 'imagenes/Imagen27.jpeg')">
             <img src="imagenes/Imagen27.jpeg" alt="Foto 27">
         </div>
-       
+
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen29.jpeg')">
+            <img src="imagenes/Imagen29.jpeg" alt="Foto 29">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen30.jpeg')">
+            <img src="imagenes/Imagen30.jpeg" alt="Foto 30">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen31.jpeg')">
+            <img src="imagenes/Imagen31.jpeg" alt="Foto 31">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen32.jpeg')">
+            <img src="imagenes/Imagen32.jpeg" alt="Foto 32">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen33.jpeg')">
+            <img src="imagenes/Imagen33.jpeg" alt="Foto 33">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen34.jpeg')">
+            <img src="imagenes/Imagen34.jpeg" alt="Foto 34">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen35.jpeg')">
+            <img src="imagenes/Imagen35.jpeg" alt="Foto 35">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen36.jpeg')">
+            <img src="imagenes/Imagen36.jpeg" alt="Foto 36">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen37.jpeg')">
+            <img src="imagenes/Imagen37.jpeg" alt="Foto 37">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen38.jpeg')">
+            <img src="imagenes/Imagen38.jpeg" alt="Foto 38">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen39.jpeg')">
+            <img src="imagenes/Imagen39.jpeg" alt="Foto 39">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen40.jpeg')">
+            <img src="imagenes/Imagen40.jpeg" alt="Foto 40">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen41.jpeg')">
+            <img src="imagenes/Imagen41.jpeg" alt="Foto 41">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen42.jpeg')">
+            <img src="imagenes/Imagen42.jpeg" alt="Foto 42">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen43.jpeg')">
+            <img src="imagenes/Imagen43.jpeg" alt="Foto 43">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen44.jpeg')">
+            <img src="imagenes/Imagen44.jpeg" alt="Foto 44">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen45.jpeg')">
+            <img src="imagenes/Imagen45.jpeg" alt="Foto 45">
+        </div>
+        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen46.jpeg')">
+            <img src="imagenes/Imagen46.jpeg" alt="Foto 46">
+        </div>
 
         <!-- Agrega más elementos .photo para más fotos -->
     </div>
