--- a/Galeria2.html
+++ b/Galeria2.html
@@ -99,8 +99,8 @@
         <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen43.jpeg')">
             <img src="imagenes/Imagen43.jpeg" alt="Foto 43">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen44.jpeg')">
-            <img src="imagenes/Imagen44.jpeg" alt="Foto 44">
+        <!--<div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen44.jpeg')">
+            <img src="imagenes/Imagen44.jpeg" alt="Foto 44">-->
         </div>
         <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen45.jpeg')">
             <img src="imagenes/Imagen45.jpeg" alt="Foto 45">
