--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 
 <body>
     <div class="windows" id="win">
+        <p> Recuerda dar todo de ti para tener un buen ciclo, ten paciencia y confianza en lo que realices 😼.</p>
+
+        <div id="cerrar">
+            <button type="button" class="color-button-close" id="win" onclick="cerrar();"> Cerrar </button>
+        </div>
+    </div>
+
+    <div class="container">
+        <h1>Buen Inicio de Ciclo</h1>
+        <!--<p>Da todo de ti para tener un buen ciclo, ten paciencia y confianza en lo que realices. Ya se viene el
+            buen estrés, presión y tareas 😼.</p>
+        <p>Te quiere bonito,<br>Renzo</p>-->
         <p> Tus ojos brillan como el cielo estrellado, </br>
             En ellos encuentro un amor tan apasionado. </br>
             Como rosas rojas, de pasión encendidos, </br>
@@ -20,17 +32,6 @@
             Un universo de amor, sin medida ni censura. </br>
             Así que en este verso te digo con certeza, </br>
             Que en tus ojos hallé la más hermosa belleza.</p>
-
-        <div id="cerrar">
-            <button type="button" class="color-button-close" id="win" onclick="cerrar();"> Cerrar </button>
-        </div>
-    </div>
-
-    <div class="container">
-        <h1>Buen Inicio de Ciclo</h1>
-        <p>Da todo de ti para tener un buen ciclo, ten paciencia y confianza en lo que realices. Ya se viene el
-            buen estrés, presión y tareas 😼.</p>
-        <p>Te quiere bonito,<br>Renzo</p>
         <button type="button" class="color-button" id="win" onclick="abrir();"> Abrir </button>
     </div>
 
