--- a/Galeria2.html
+++ b/Galeria2.html
@@ -53,61 +53,58 @@
         <div class="photo" onclick="openModal('JjhkJKHjkhakjhsHJ', 'Bonita barba', 'imagenes/Imagen27.jpeg')">
             <img src="imagenes/Imagen27.jpeg" alt="Foto 27">
         </div>
-
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen29.jpeg')">
+        <div class="photo" onclick="openModal('Hermosa', 'Belleza indescriptible', 'imagenes/Imagen29.jpeg')">
             <img src="imagenes/Imagen29.jpeg" alt="Foto 29">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen30.jpeg')">
+        <div class="photo" onclick="openModal('a', 'Amooooo', 'imagenes/Imagen30.jpeg')">
             <img src="imagenes/Imagen30.jpeg" alt="Foto 30">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen31.jpeg')">
+        <div class="photo" onclick="openModal('Jijijijij', 'Lit jijijij', 'imagenes/Imagen31.jpeg')">
             <img src="imagenes/Imagen31.jpeg" alt="Foto 31">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen32.jpeg')">
+        <div class="photo" onclick="openModal('Drogo', 'Lit un gato drogo', 'imagenes/Imagen32.jpeg')">
             <img src="imagenes/Imagen32.jpeg" alt="Foto 32">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen33.jpeg')">
+        <div class="photo" onclick="openModal('Paz 🙏🏻', 'Enemige de Shadow', 'imagenes/Imagen33.jpeg')">
             <img src="imagenes/Imagen33.jpeg" alt="Foto 33">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen34.jpeg')">
+        <div class="photo" onclick="openModal('Amén', 'Nuevo corte ahjkshjdajhs', 'imagenes/Imagen34.jpeg')">
             <img src="imagenes/Imagen34.jpeg" alt="Foto 34">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen35.jpeg')">
+        <div class="photo" onclick="openModal('Antes del Amén', 'Fotis antes del cambio jhasjhdhjasd', 'imagenes/Imagen35.jpeg')">
             <img src="imagenes/Imagen35.jpeg" alt="Foto 35">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen36.jpeg')">
+        <div class="photo" onclick="openModal('Mechón', 'Lit agarró sus tijeras y me sacó un mechón ajhshjdhajshj amo', 'imagenes/Imagen36.jpeg')">
             <img src="imagenes/Imagen36.jpeg" alt="Foto 36">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen37.jpeg')">
+        <div class="photo" onclick="openModal('Mininita', 'Hermosa, preciosa, bella, linda, guapa, maravillosa, diosa', 'imagenes/Imagen37.jpeg')">
             <img src="imagenes/Imagen37.jpeg" alt="Foto 37">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen38.jpeg')">
+        <div class="photo" onclick="openModal('Mordida', 'JHKkajsjkAJHSKJH', 'imagenes/Imagen38.jpeg')">
             <img src="imagenes/Imagen38.jpeg" alt="Foto 38">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen39.jpeg')">
+        <div class="photo" onclick="openModal('Cajita', 'Casa temporal para el viaje de Mcnuggets y hermanas', 'imagenes/Imagen39.jpeg')">
             <img src="imagenes/Imagen39.jpeg" alt="Foto 39">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen40.jpeg')">
+        <div class="photo" onclick="openModal('Mcnuggets', 'Conocimos a Mcnuggets y hermana', 'imagenes/Imagen40.jpeg')">
             <img src="imagenes/Imagen40.jpeg" alt="Foto 40">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen41.jpeg')">
-            <img src="imagenes/Imagen41.jpeg" alt="Foto 41">
+        <div class="photo" onclick="openModal('Anillito', 'Un día muy especial', 'imagenes/Imagen41.jpeg')">
+            <img src="imagenes/Imagen41.jpeg" alt="Foto 41"> <!--05/09/23-->
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen42.jpeg')">
+        <div class="photo" onclick="openModal('Lukituki and Raboooo', 'Descansando juntis en su mantita para que no manchen la camita hjasjhdhjajs', 'imagenes/Imagen42.jpeg')">
             <img src="imagenes/Imagen42.jpeg" alt="Foto 42">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen43.jpeg')">
+        <div class="photo" onclick="openModal('Pan', 'Pancito preparado por mi amorcito hermosa', 'imagenes/Imagen43.jpeg')">
             <img src="imagenes/Imagen43.jpeg" alt="Foto 43">
         </div>
-        <!--<div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen44.jpeg')">
-            <img src="imagenes/Imagen44.jpeg" alt="Foto 44">-->
+        <div class="photo" onclick="openModal('Mangos en cubos', 'me mandó fotis del mango que me iba a invitar hjsajhsjhaj', 'imagenes/Imagen44.jpeg')">
+            <img src="imagenes/Imagen44.jpeg" alt="Foto 44">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen45.jpeg')">
+        <div class="photo" onclick="openModal('Tortitaa', 'Le respondí con mi tortita jijijij', 'imagenes/Imagen45.jpeg')">
             <img src="imagenes/Imagen45.jpeg" alt="Foto 45">
         </div>
-        <div class="photo" onclick="openModal(' Ingrese Descripción ', ' Ingrese Descripción ', 'imagenes/Imagen46.jpeg')">
-            <img src="imagenes/Imagen46.jpeg" alt="Foto 46">
-        </div>
+        
 
         <!-- Agrega más elementos .photo para más fotos -->
     </div>
