--- a/Galeria2.html
+++ b/Galeria2.html
@@ -104,6 +104,39 @@
         <div class="photo" onclick="openModal('Tortitaa', 'Le respondí con mi tortita jijijij', 'imagenes/Imagen45.jpeg')">
             <img src="imagenes/Imagen45.jpeg" alt="Foto 45">
         </div>
+        <div class="photo" onclick="openModal('Encerrao', 'En el bañito rojita por tomar 80 vinos jajhshjasja', 'imagenes/Imagen46.jpeg')">
+            <img src="imagenes/Imagen46.jpeg" alt="Foto 46">
+        </div>
+        <div class="photo" onclick="openModal('Almuercito', 'Un buen puré con su spray rico rico luego de las clases de lideres jijjij', 'imagenes/Imagen47.jpeg')">
+            <img src="imagenes/Imagen47.jpeg" alt="Foto 47">
+        </div>
+        <div class="photo" onclick="openModal('Infiltrandome 😼', 'Con sus llaves visitando a Luke y Tabito', 'imagenes/Imagen48.jpeg')">
+            <img src="imagenes/Imagen48.jpeg" alt="Foto 48">
+        </div>
+        <div class="photo" onclick="openModal('Momidazos', 'Tabo y Luke mimiendo en el sillón bien rico', 'imagenes/Imagen49.jpeg')">
+            <img src="imagenes/Imagen49.jpeg" alt="Foto 49">
+        </div>
+        <div class="photo" onclick="openModal('Amarillas', 'Las flores amarillas con más de 2 utilidades jajhshjdjhajs', 'imagenes/Imagen50.jpeg')">
+            <img src="imagenes/Imagen50.jpeg" alt="Foto 50">
+        </div>
+        <div class="photo" onclick="openModal('Postre', 'Era 18 y fui a San Gabriel para traerle un postre que le gusta mucho a mininita', 'imagenes/Imagen51.jpeg')">
+            <img src="imagenes/Imagen51.jpeg" alt="Foto 51">
+        </div>
+        <div class="photo" onclick="openModal('Videollamadita meet', 'Admirando su belleza', 'imagenes/Imagen52.jpeg')">
+            <img src="imagenes/Imagen52.jpeg" alt="Foto 52">
+        </div>
+        <div class="photo" onclick="openModal('Una Rata', 'Sorprendente, curvilínea y elocuente, magníficamente colosal, colosalmente animal', 'imagenes/Imagen53.jpeg')">
+            <img src="imagenes/Imagen53.jpeg" alt="Foto 53">
+        </div>
+        <div class="photo" onclick="openModal('Hermoso', 'Me dio un cuadrito realizado por ella durante clases, ame, amo y amaré, Tengo el cuadrito en mi cuarto para que todos lo vean jijij', 'imagenes/Imagen54.jpeg')">
+            <img src="imagenes/Imagen54.jpeg" alt="Foto 54">
+        </div>
+        <div class="photo" onclick="openModal('Barbieee', 'Un recuerdo cuando acompañe a mi amorcito (en ese entonces no era mi amocito) al cine con sus amies', 'imagenes/Imagen55.jpeg')">
+            <img src="imagenes/Imagen55.jpeg" alt="Foto 55">
+        </div>
+        <div class="photo" onclick="openModal('Uñites', 'Viendo lo similares que son nuestras uñites jajhsjhadjhsj 😽', 'imagenes/Imagen56.jpeg')">
+            <img src="imagenes/Imagen56.jpeg" alt="Foto 56">
+        </div>
         
 
         <!-- Agrega más elementos .photo para más fotos -->
