--- a/Galeria2.html
+++ b/Galeria2.html
@@ -169,7 +169,7 @@
     </script>
 </body>
 <br>
-<footer>
+<footer class="contenedor">
     <div>
         <a href="Galeria1.html" type="button" class="color-button-back"> Atras </a>
     </div>
