--- a/Galeria1.html
+++ b/Galeria1.html
@@ -96,7 +96,7 @@
     </script>
 </body>
 <br>
-<footer>
+<footer class="contenedor">
     <div>
         <a href="index.html" type="button" class="color-button-back"> Atras </a>
     </div>
