--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="imagenes/ImagenA.jpeg">
-    <title>Buen Inicio de Ciclo</title>
+    <title>Tengamos un buen ciclo</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     </div>
 
     <div class="container">
-        <h1>Feliz Mes</h1>
+        <h1>Mes de turrones 😼</h1>
         <!--<p>Da todo de ti para tener un buen ciclo, ten paciencia y confianza en lo que realices. Ya se viene el
             buen estrés, presión y tareas 😼.</p>
         <p>Te quiere bonito,<br>Renzo</p>-->
