--- a/Galeria3.html
+++ b/Galeria3.html
@@ -5,16 +5,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylegalery.css">
-    <title>Proceso</title>
+    <link rel="icon" href="imagenes/ImagenA.jpeg">
+
+    <title>Tercera Galeria</title>
 </head>
 
 <body>
 
     <div class="container">
-        <h1>En proceso de la Tercera Galeria</h1>
-        <p>Nuestro equipo de desarrollo se encuentra trabajando para brindar más paginas😼.</p>
+        <h1>Tercera Galeria</h1>
         <a href="index.html" type="button" class="color-button-back"> Inicio </a>
     </div>
+
+    <div class="gallery">
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'imagenes/Imagen13.jpeg')">
+            <img src="imagenes/Imagen12.jpeg" alt="Foto 1">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 2', 'imagenes/Imagen14.jpeg')">
+            <img src="imagenes/Imagen14.jpeg" alt="Foto 2">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 3', 'imagenes/Imagen15.jpeg')">
+            <img src="imagenes/Imagen15.jpeg" alt="Foto 3">
+        </div>       
+
+    <!-- Agrega más elementos .photo para más fotos -->
+    </div>
+
+
+    <div class="modal" id="modal" onclick="closeModal()">
+        <div class="modal-content" onclick="event.stopPropagation();">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2 id="modal-title">Título de la Foto</h2>
+            <p id="modal-description">Descripción de la foto.</p>
+            <img id="modal-image" class="modal-image" src="" alt="">
+        </div>
+    </div>
+    <script>
+        function openModal(title, description, imageUrl) {
+            var modal = document.getElementById("modal");
+            var modalTitle = document.getElementById("modal-title");
+            var modalDescription = document.getElementById("modal-description");
+            var modalImage = document.getElementById("modal-image");
+
+            modalTitle.textContent = title;
+            modalDescription.textContent = description;
+            modalImage.src = imageUrl;
+
+            modal.style.display = "flex";
+        }
+
+        function closeModal() {
+            var modal = document.getElementById("modal");
+            modal.style.display = "none";
+        }
+
+        window.addEventListener("load", function () {
+            var loaderContainer = document.querySelector(".loader-container");
+            loaderContainer.style.display = "none";
+        });
+
+    </script>
 </body>
+<br>
+<footer class="contenedor">
+    <div>
+        <a href="Galeria1.html" type="button" class="color-button-back"> Atras </a>
+    </div>
+    <br>
+    <div>
+        <a href="Galeria3.html" type="button" class="color-button-back"> Siguiente </a>
+    </div>
+</footer>
+<br>
 
 </html>
