--- a/Galeria3.html
+++ b/Galeria3.html
@@ -18,15 +18,49 @@
     </div>
 
     <div class="gallery">
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 1', 'imagenes/Imagen13.jpeg')">
-            <img src="imagenes/Imagen12.jpeg" alt="Foto 1">
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 57', 'imagenes/Imagen57.jpeg')">
+            <img src="imagenes/Imagen57.jpeg" alt="Foto 57">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 2', 'imagenes/Imagen14.jpeg')">
-            <img src="imagenes/Imagen14.jpeg" alt="Foto 2">
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 58', 'imagenes/Imagen58.jpeg')">
+            <img src="imagenes/Imagen58.jpeg" alt="Foto 58">
         </div>
-        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 3', 'imagenes/Imagen15.jpeg')">
-            <img src="imagenes/Imagen15.jpeg" alt="Foto 3">
-        </div>       
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 59', 'imagenes/Imagen59.jpeg')">
+            <img src="imagenes/Imagen59.jpeg" alt="Foto 59">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 60', 'imagenes/Imagen60.jpeg')">
+            <img src="imagenes/Imagen60.jpeg" alt="Foto 60">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 61', 'imagenes/Imagen61.jpeg')">
+            <img src="imagenes/Imagen61.jpeg" alt="Foto 61">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 62', 'imagenes/Imagen62.jpeg')">
+            <img src="imagenes/Imagen62.jpeg" alt="Foto 62">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 63', 'imagenes/Imagen63.jpeg')">
+            <img src="imagenes/Imagen63.jpeg" alt="Foto 63">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 64', 'imagenes/Imagen64.jpeg')">
+            <img src="imagenes/Imagen64.jpeg" alt="Foto 64">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 65', 'imagenes/Imagen65.jpeg')">
+            <img src="imagenes/Imagen65.jpeg" alt="Foto 65">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 66', 'imagenes/Imagen66.jpeg')">
+            <img src="imagenes/Imagen66.jpeg" alt="Foto 66">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 67', 'imagenes/Imagen67.jpeg')">
+            <img src="imagenes/Imagen67.jpeg" alt="Foto 67">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 68', 'imagenes/Imagen68.jpeg')">
+            <img src="imagenes/Imagen68.jpeg" alt="Foto 68">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 69', 'imagenes/Imagen69.jpeg')">
+            <img src="imagenes/Imagen69.jpeg" alt="Foto 69">
+        </div>
+        <div class="photo" onclick="openModal('Foto', 'Descripción de la Foto 70', 'imagenes/Imagen70.jpeg')">
+            <img src="imagenes/Imagen70.jpeg" alt="Foto 70">
+        </div>
+        
 
     <!-- Agrega más elementos .photo para más fotos -->
     </div>
@@ -69,11 +103,11 @@
 <br>
 <footer class="contenedor">
     <div>
-        <a href="Galeria1.html" type="button" class="color-button-back"> Atras </a>
+        <a href="Galeria2.html" type="button" class="color-button-back"> Atras </a>
     </div>
     <br>
     <div>
-        <a href="Galeria3.html" type="button" class="color-button-back"> Siguiente </a>
+        <a href="index.html" type="button" class="color-button-back"> Inicio </a>
     </div>
 </footer>
 <br>
